# yafra-tdb-c

./: .cproject  .gitignore  .project  CMakeLists.txt  Dockerfile  NOTICE  README.md  build-local.sh  build-openshift.sh  build-shippable.sh  run-docker.sh  run-environment.sh  shippable.yml
org.yafra.clibs/include/: pssys.h
org.yafra.clibs/libs/matrix/: CMakeLists.txt
org.yafra.clibs/libs/psgui/: CMakeLists.txt
org.yafra.clibs/libs/psipc/: CMakeLists.txt
org.yafra.clibs/libs/psmodul/: CMakeLists.txt
org.yafra.clibs/libs/psmume/: CMakeLists.txt  index.html
org.yafra.clibs/libs/psmume/source/: pbmplus.h
org.yafra.clibs/libs/pssercom/: CMakeLists.txt
org.yafra.clibs/libs/pssys/: CMakeLists.txt
org.yafra.clibs/libs/pssys/testsuite/chars/: CMakeLists.txt
org.yafra.clibs/libs/pssys/testsuite/datetime/: CMakeLists.txt
org.yafra.tdb.addons.cmdsrv/: CMakeLists.txt
org.yafra.tdb.addons.psedit/: .gitignore  CMakeLists.txt  psedit.c
org.yafra.tdb.addons.pswhat/: CMakeLists.txt
org.yafra.tdb.addons.pswhat/source/: conf.h
org.yafra.tdb.admin-ui/: README.MD
org.yafra.tdb.classic/: makefile
org.yafra.tdb.classic/act/structtest/: makefile  struct_test.c
org.yafra.tdb.classic/dbi/: readShort.c
org.yafra.tdb.classic/gui/: bboard.c  bcatextr.c  bdlnredu.c  bdlnsex.c  bdlntype.c  bmenubtn.c
org.yafra.tdb.classic/lib/: CMakeLists.txt
org.yafra.tdb.setup/config/linux/: mpgui.pro
