cmake_minimum_required(VERSION 3.3)
project(yafra_tdb_c)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    org.yafra.clibs/include/Xbae/Actions.h
    org.yafra.clibs/include/Xbae/Caption.h
    org.yafra.clibs/include/Xbae/CaptionP.h
    org.yafra.clibs/include/Xbae/Cell.h
    org.yafra.clibs/include/Xbae/CellP.h
    org.yafra.clibs/include/Xbae/Clip.h
    org.yafra.clibs/include/Xbae/ClipP.h
    org.yafra.clibs/include/Xbae/Converters.h
    org.yafra.clibs/include/Xbae/Macros.h
    org.yafra.clibs/include/Xbae/Matrix.h
    org.yafra.clibs/include/Xbae/MatrixP.h
    org.yafra.clibs/include/Xbae/Methods.h
    org.yafra.clibs/include/Xbae/ScrollMgr.h
    org.yafra.clibs/include/Xbae/Utils.h
    org.yafra.clibs/include/pscmd.h
    org.yafra.clibs/include/psgui.h
    org.yafra.clibs/include/psipc.h
    org.yafra.clibs/include/psmatrix.h
    org.yafra.clibs/include/psmodul.h
    org.yafra.clibs/include/psmume.h
    org.yafra.clibs/include/psportable.h
    org.yafra.clibs/include/pssercom.h
    org.yafra.clibs/include/psshared.h
    org.yafra.clibs/include/pssys.h
    org.yafra.clibs/libs/matrix/source/Actions.c
    org.yafra.clibs/libs/matrix/source/Caption.c
    org.yafra.clibs/libs/matrix/source/Cell.c
    org.yafra.clibs/libs/matrix/source/Clip.c
    org.yafra.clibs/libs/matrix/source/Converters.c
    org.yafra.clibs/libs/matrix/source/Matrix.c
    org.yafra.clibs/libs/matrix/source/Methods.c
    org.yafra.clibs/libs/matrix/source/Public.c
    org.yafra.clibs/libs/matrix/source/ScrollMgr.c
    org.yafra.clibs/libs/matrix/source/Utils.c
    org.yafra.clibs/libs/matrix/index.html
    org.yafra.clibs/libs/matrix/makefile
    org.yafra.clibs/libs/psgui/source/editfile.c
    org.yafra.clibs/libs/psgui/source/frame.c
    org.yafra.clibs/libs/psgui/source/icon.c
    org.yafra.clibs/libs/psgui/makefile
    org.yafra.clibs/libs/psipc/source/client.c
    org.yafra.clibs/libs/psipc/source/daemon.c
    org.yafra.clibs/libs/psipc/source/fork.c
    org.yafra.clibs/libs/psipc/source/pipeio.c
    org.yafra.clibs/libs/psipc/source/server.c
    org.yafra.clibs/libs/psipc/source/service.c
    org.yafra.clibs/libs/psipc/source/socket.c
    org.yafra.clibs/libs/psipc/source/socket.h
    org.yafra.clibs/libs/psipc/source/utils.c
    org.yafra.clibs/libs/psipc/testsuite/fork/makefile
    org.yafra.clibs/libs/psipc/testsuite/fork/ntlibs.txt
    org.yafra.clibs/libs/psipc/testsuite/fork/psfork.c
    org.yafra.clibs/libs/psipc/testsuite/psclient-cons/makefile
    org.yafra.clibs/libs/psipc/testsuite/psclient-cons/ntlibs.txt
    org.yafra.clibs/libs/psipc/testsuite/psclient-cons/psclient-cons.vcproj
    org.yafra.clibs/libs/psipc/testsuite/psclient-cons/psclient.c
    org.yafra.clibs/libs/psipc/testsuite/psclient-java/AppletClient.html
    org.yafra.clibs/libs/psipc/testsuite/psclient-java/AppletClient.java
    org.yafra.clibs/libs/psipc/testsuite/psclient-java/Client.java
    org.yafra.clibs/libs/psipc/testsuite/psclient-java/index.html
    org.yafra.clibs/libs/psipc/testsuite/psclient-perl/psclient.pl
    org.yafra.clibs/libs/psipc/testsuite/psclient-perl/psserver.pl
    org.yafra.clibs/libs/psipc/testsuite/psclient-python/main.glade
    org.yafra.clibs/libs/psipc/testsuite/psclient-python/psclient-python.py
    org.yafra.clibs/libs/psipc/testsuite/psserver/makefile
    org.yafra.clibs/libs/psipc/testsuite/psserver/ntlibs.txt
    org.yafra.clibs/libs/psipc/testsuite/psserver/psserver.c
    org.yafra.clibs/libs/psipc/testsuite/psserver/psserver.h
    org.yafra.clibs/libs/psipc/testsuite/psserver/psserver.vcproj
    org.yafra.clibs/libs/psipc/index.html
    org.yafra.clibs/libs/psipc/makefile
    org.yafra.clibs/libs/psipc/psipc.vcproj
    org.yafra.clibs/libs/psmodul/source/hasp32b_obj.zip
    org.yafra.clibs/libs/psmodul/source/haspms32_obj.zip
    org.yafra.clibs/libs/psmodul/source/ntprot.h
    org.yafra.clibs/libs/psmodul/source/psmodul.c
    org.yafra.clibs/libs/psmodul/source/psmodul_nt.c
    org.yafra.clibs/libs/psmodul/testsuite/makefile
    org.yafra.clibs/libs/psmodul/testsuite/ntlibs.txt
    org.yafra.clibs/libs/psmodul/testsuite/tsthasp.c
    org.yafra.clibs/libs/psmodul/1readme
    org.yafra.clibs/libs/psmodul/index.html
    org.yafra.clibs/libs/psmodul/makefile
    org.yafra.clibs/libs/psmume/source/aud_hp.c
    org.yafra.clibs/libs/psmume/source/aud_hp.h
    org.yafra.clibs/libs/psmume/source/aud_hputils.c
    org.yafra.clibs/libs/psmume/source/aud_linux.c
    org.yafra.clibs/libs/psmume/source/aud_windows.c
    org.yafra.clibs/libs/psmume/source/audio.c
    org.yafra.clibs/libs/psmume/source/image.c
    org.yafra.clibs/libs/psmume/source/libpbm.h
    org.yafra.clibs/libs/psmume/source/libpbm1.c
    org.yafra.clibs/libs/psmume/source/libpbm2.c
    org.yafra.clibs/libs/psmume/source/libpbm3.c
    org.yafra.clibs/libs/psmume/source/libpbm4.c
    org.yafra.clibs/libs/psmume/source/libpbm5.c
    org.yafra.clibs/libs/psmume/source/libpgm.h
    org.yafra.clibs/libs/psmume/source/libpgm1.c
    org.yafra.clibs/libs/psmume/source/libpgm2.c
    org.yafra.clibs/libs/psmume/source/libppm.h
    org.yafra.clibs/libs/psmume/source/libppm1.c
    org.yafra.clibs/libs/psmume/source/libppm2.c
    org.yafra.clibs/libs/psmume/source/libppm3.c
    org.yafra.clibs/libs/psmume/source/libppm4.c
    org.yafra.clibs/libs/psmume/source/libppm5.c
    org.yafra.clibs/libs/psmume/source/orread.c
    org.yafra.clibs/libs/psmume/source/orrsize.c
    org.yafra.clibs/libs/psmume/source/pbm.h
    org.yafra.clibs/libs/psmume/source/pbmfont.h
    org.yafra.clibs/libs/psmume/source/pbmload.c
    org.yafra.clibs/libs/psmume/source/pbmplus.h
    org.yafra.clibs/libs/psmume/source/pbmprint.c
    org.yafra.clibs/libs/psmume/source/pbmvers.h
    org.yafra.clibs/libs/psmume/source/pgm.h
    org.yafra.clibs/libs/psmume/source/ppm.h
    org.yafra.clibs/libs/psmume/source/ppmcmap.h
    org.yafra.clibs/libs/psmume/source/ppmdraw.h
    org.yafra.clibs/libs/psmume/source/ppmload.c
    org.yafra.clibs/libs/psmume/source/video.c
    org.yafra.clibs/libs/psmume/index.html
    org.yafra.clibs/libs/psmume/makefile
    org.yafra.clibs/libs/psmume/oras.html
    org.yafra.clibs/libs/pssercom/source/fax.c
    org.yafra.clibs/libs/pssercom/source/fax_hylafax.c
    org.yafra.clibs/libs/pssercom/source/fax_uniplex.c
    org.yafra.clibs/libs/pssercom/source/mdm_hangup.c
    org.yafra.clibs/libs/pssercom/source/mdm_io.c
    org.yafra.clibs/libs/pssercom/source/mdm_lock.c
    org.yafra.clibs/libs/pssercom/source/mdm_port.c
    org.yafra.clibs/libs/pssercom/source/mdm_redial.c
    org.yafra.clibs/libs/pssercom/index.html
    org.yafra.clibs/libs/pssercom/makefile
    org.yafra.clibs/libs/pssys/source/alloc.c
    org.yafra.clibs/libs/pssys/source/cgi.c
    org.yafra.clibs/libs/pssys/source/char.c
    org.yafra.clibs/libs/pssys/source/cmd_clnt.c
    org.yafra.clibs/libs/pssys/source/config.c
    org.yafra.clibs/libs/pssys/source/date.c
    org.yafra.clibs/libs/pssys/source/free.c
    org.yafra.clibs/libs/pssys/source/help.c
    org.yafra.clibs/libs/pssys/source/html.c
    org.yafra.clibs/libs/pssys/source/inettools.c
    org.yafra.clibs/libs/pssys/source/log.c
    org.yafra.clibs/libs/pssys/source/password.c
    org.yafra.clibs/libs/pssys/source/signal.c
    org.yafra.clibs/libs/pssys/source/wintools.c
    org.yafra.clibs/libs/pssys/tests/characterTest.cpp
    org.yafra.clibs/libs/pssys/tests/mainTest.cpp
    org.yafra.clibs/libs/pssys/tests/sysLibTest.h
    org.yafra.clibs/libs/pssys/testsuite/cgi/makefile
    org.yafra.clibs/libs/pssys/testsuite/cgi/mwncgi.c
    org.yafra.clibs/libs/pssys/testsuite/chars/makefile
    org.yafra.clibs/libs/pssys/testsuite/chars/ntlibs.txt
    org.yafra.clibs/libs/pssys/testsuite/chars/pschartest.c
    org.yafra.clibs/libs/pssys/testsuite/cmd/makefile
    org.yafra.clibs/libs/pssys/testsuite/cmd/ntlibs.txt
    org.yafra.clibs/libs/pssys/testsuite/cmd/pscmd.c
    org.yafra.clibs/libs/pssys/testsuite/cmdsrv/client.c
    org.yafra.clibs/libs/pssys/testsuite/datetime/makefile
    org.yafra.clibs/libs/pssys/testsuite/datetime/psdatetime.c
    org.yafra.clibs/libs/pssys/testsuite/datetime/start
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/res/helpmw.ico
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/res/helpmw.rc2
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/res/helpmwDoc.ico
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/res/Toolbar.bmp
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/childfrm.cpp
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/childfrm.h
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/helpmw.cpp
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/helpmw.h
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/helpmw.mak
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/helpmw.mdp
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/helpmw.ncb
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/helpmw.rc
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/helpmw.sln
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/helpmw.vcproj
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/helpmwdoc.cpp
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/helpmwdoc.h
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/helpmwview.cpp
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/helpmwview.h
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/mainfrm.cpp
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/mainfrm.h
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/makehelp.bat
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/readme.txt
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/resource.h
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/stdafx.cpp
    org.yafra.clibs/libs/pssys/testsuite/help/mfc/stdafx.h
    org.yafra.clibs/libs/pssys/testsuite/help/motif/makefile
    org.yafra.clibs/libs/pssys/testsuite/help/motif/ntlibs.txt
    org.yafra.clibs/libs/pssys/testsuite/help/motif/tsthelp.c
    org.yafra.clibs/libs/pssys/testsuite/logging/makefile
    org.yafra.clibs/libs/pssys/testsuite/logging/pslog.c
    org.yafra.clibs/libs/pssys/index.html
    org.yafra.clibs/libs/pssys/logmsg.html
    org.yafra.clibs/libs/pssys/makefile
    org.yafra.clibs/libs/pssys/portable.html
    org.yafra.clibs/libs/pssys/pssys.vcproj
    org.yafra.clibs/libs/index.html
    org.yafra.clibs/libs/libs.sln
    org.yafra.clibs/libs/makefile
    org.yafra.clibs/Readme.txt
    org.yafra.tdb.addons.cmdsrv/source/cmd.h
    org.yafra.tdb.addons.cmdsrv/source/io.c
    org.yafra.tdb.addons.cmdsrv/source/server.c
    org.yafra.tdb.addons.cmdsrv/source/utils.c
    org.yafra.tdb.addons.cmdsrv/index.html
    org.yafra.tdb.addons.cmdsrv/makefile
    org.yafra.tdb.addons.cmdsrv/ntlibs.txt
    org.yafra.tdb.addons.cmdsrv/README
    org.yafra.tdb.addons.cmdsrv/readme.txt
    org.yafra.tdb.addons.psedit/makefile
    org.yafra.tdb.addons.psedit/psedit.c
    org.yafra.tdb.addons.pswhat/source/conf.h
    org.yafra.tdb.addons.pswhat/source/ident.c
    org.yafra.tdb.addons.pswhat/source/pswhatident.c
    org.yafra.tdb.addons.pswhat/source/rcsbase.h
    org.yafra.tdb.addons.pswhat/source/rcsmap.c
    org.yafra.tdb.addons.pswhat/source/version.c
    org.yafra.tdb.addons.pswhat/source/what.c
    org.yafra.tdb.addons.pswhat/makefile
    org.yafra.tdb.admin-ui/__init__.py
    org.yafra.tdb.admin-ui/about.glade
    org.yafra.tdb.admin-ui/about.py
    org.yafra.tdb.admin-ui/commtdb.py
    org.yafra.tdb.admin-ui/config.py
    org.yafra.tdb.admin-ui/main.glade
    org.yafra.tdb.admin-ui/main.py
    org.yafra.tdb.admin-ui/README.MD
    org.yafra.tdb.admin-ui/tdbcore.py
    org.yafra.tdb.admin-ui/tdbglobal.py
    org.yafra.tdb.classic/act/arrkom/makefile
    org.yafra.tdb.classic/act/arrkom/OUTarrkom.c
    org.yafra.tdb.classic/act/change/makefile
    org.yafra.tdb.classic/act/change/OUTchange.c
    org.yafra.tdb.classic/act/kapaupdate/makefile
    org.yafra.tdb.classic/act/kapaupdate/OUTkapaupdate.c
    org.yafra.tdb.classic/act/kapaupdate/readme.txt
    org.yafra.tdb.classic/act/komm/makefile
    org.yafra.tdb.classic/act/komm/OUTkomm.c
    org.yafra.tdb.classic/act/lib/AKTarrang.c
    org.yafra.tdb.classic/act/lib/AKTbook.c
    org.yafra.tdb.classic/act/lib/AKTcntrl.c
    org.yafra.tdb.classic/act/lib/AKTcommis.c
    org.yafra.tdb.classic/act/lib/AKTcompare.c
    org.yafra.tdb.classic/act/lib/AKTdatetime.c
    org.yafra.tdb.classic/act/lib/AKTdepbez.c
    org.yafra.tdb.classic/act/lib/AKTdeptxt.c
    org.yafra.tdb.classic/act/lib/AKTdevice.c
    org.yafra.tdb.classic/act/lib/AKTdienst.c
    org.yafra.tdb.classic/act/lib/AKTdln.c
    org.yafra.tdb.classic/act/lib/AKTiobuffer.c
    org.yafra.tdb.classic/act/lib/AKTlanguage.c
    org.yafra.tdb.classic/act/lib/AKTlayout.c
    org.yafra.tdb.classic/act/lib/AKTlock.c
    org.yafra.tdb.classic/act/lib/AKTmail.c
    org.yafra.tdb.classic/act/lib/AKTmsg.c
    org.yafra.tdb.classic/act/lib/AKTprice.c
    org.yafra.tdb.classic/act/lib/AKTrecipient.c
    org.yafra.tdb.classic/act/lib/AKTreservat.c
    org.yafra.tdb.classic/act/maintdlt/MAINTdlt.c
    org.yafra.tdb.classic/act/maintdlt/makefile
    org.yafra.tdb.classic/act/maintmsg/MAINTmsg.c
    org.yafra.tdb.classic/act/maintmsg/makefile
    org.yafra.tdb.classic/act/mainttxt/MAINTtxtbez.c
    org.yafra.tdb.classic/act/mainttxt/makefile
    org.yafra.tdb.classic/act/pricing/makefile
    org.yafra.tdb.classic/act/pricing/OUTpricing.c
    org.yafra.tdb.classic/act/request/makefile
    org.yafra.tdb.classic/act/request/ntactlibs.txt
    org.yafra.tdb.classic/act/request/OUTrequest.c
    org.yafra.tdb.classic/act/saisonclean/del.sql
    org.yafra.tdb.classic/act/saisonclean/global_check.sql
    org.yafra.tdb.classic/act/saisonclean/makefile
    org.yafra.tdb.classic/act/saisonclean/mpclean.c
    org.yafra.tdb.classic/act/saisonclean/s
    org.yafra.tdb.classic/act/saisonclean/s.sql
    org.yafra.tdb.classic/act/saisonclean/x.x
    org.yafra.tdb.classic/act/stamm/makefile
    org.yafra.tdb.classic/act/stamm/OUTstamm.c
    org.yafra.tdb.classic/act/statdl/makefile
    org.yafra.tdb.classic/act/statdl/OUTstatdl.c
    org.yafra.tdb.classic/act/statdlt/makefile
    org.yafra.tdb.classic/act/statdlt/OUTstatdlt.c
    org.yafra.tdb.classic/act/statkont/makefile
    org.yafra.tdb.classic/act/statkont/OUTstatkont.c
    org.yafra.tdb.classic/act/structtest/makefile
    org.yafra.tdb.classic/act/structtest/ntactlibs.txt
    org.yafra.tdb.classic/act/structtest/struct_test.c
    org.yafra.tdb.classic/act/test/makefile
    org.yafra.tdb.classic/act/test/mptest.c
    org.yafra.tdb.classic/act/test/ntactlibs.txt
    org.yafra.tdb.classic/act/test/sel.sql
    org.yafra.tdb.classic/act/Aktionen.txt
    org.yafra.tdb.classic/act/OUTtemplate.c
    org.yafra.tdb.classic/api/cashdouble.c
    org.yafra.tdb.classic/api/cashint.c
    org.yafra.tdb.classic/api/copyTextTo.c
    org.yafra.tdb.classic/api/dbadabas.cpc
    org.yafra.tdb.classic/api/dbdummy.sql
    org.yafra.tdb.classic/api/dbhp.sql
    org.yafra.tdb.classic/api/dbingres.sc
    org.yafra.tdb.classic/api/dbmsql.src
    org.yafra.tdb.classic/api/dbmysql.msc
    org.yafra.tdb.classic/api/dboci.ora
    org.yafra.tdb.classic/api/dbodbc.msc
    org.yafra.tdb.classic/api/dboracle.pc
    org.yafra.tdb.classic/api/DeleteBez.c
    org.yafra.tdb.classic/api/DeleteEntry.c
    org.yafra.tdb.classic/api/InsertBez.c
    org.yafra.tdb.classic/api/InsertEntry.c
    org.yafra.tdb.classic/api/MailAdd.c
    org.yafra.tdb.classic/api/MailClose.c
    org.yafra.tdb.classic/api/MailOpen.c
    org.yafra.tdb.classic/api/MailSend.c
    org.yafra.tdb.classic/api/PREgetprice.c
    org.yafra.tdb.classic/api/profile.c
    org.yafra.tdb.classic/api/put_date_in.c
    org.yafra.tdb.classic/api/ReadDate.c
    org.yafra.tdb.classic/api/ReadTime.c
    org.yafra.tdb.classic/api/reduktion.c
    org.yafra.tdb.classic/api/SelectBez.c
    org.yafra.tdb.classic/api/SelectBezARR.c
    org.yafra.tdb.classic/api/SelectBezDLN.c
    org.yafra.tdb.classic/api/SelectBezKUN.c
    org.yafra.tdb.classic/api/SelectDL.c
    org.yafra.tdb.classic/api/SelectDLT.c
    org.yafra.tdb.classic/api/SelectEntry.c
    org.yafra.tdb.classic/api/SelectOneId.c
    org.yafra.tdb.classic/api/SelectRECHST.c
    org.yafra.tdb.classic/api/SelectTDL.c
    org.yafra.tdb.classic/api/SelFromTxt.c
    org.yafra.tdb.classic/api/UpdateEntry.c
    org.yafra.tdb.classic/api/UtilConvertChar.c
    org.yafra.tdb.classic/api/UtilExec.c
    org.yafra.tdb.classic/api/UtilIDcount.c
    org.yafra.tdb.classic/api/UtilIDmax.c
    org.yafra.tdb.classic/api/UtilIDmin.c
    org.yafra.tdb.classic/api/UtilIDnew.c
    org.yafra.tdb.classic/api/UtilSplit.c
    org.yafra.tdb.classic/api/UtilUpdateBookSta.c
    org.yafra.tdb.classic/api/WriteDate.c
    org.yafra.tdb.classic/api/WriteTime.c
    org.yafra.tdb.classic/cgi-bin/internet/bookertest.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpangebot.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpbooker.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpbuchung.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpchecker.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpcompany.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpeubook1.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpeubook2.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpeubookstat.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpgetarr.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpgetarrs.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpgetdl.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpgetdls.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpprivate.pl
    org.yafra.tdb.classic/cgi-bin/internet/mpprivate1.pl
    org.yafra.tdb.classic/cgi-bin/internet/mptraveller.pl
    org.yafra.tdb.classic/cgi-bin/mplib.pm
    org.yafra.tdb.classic/cgi-bin/tointernet.html
    org.yafra.tdb.classic/cgi-bin/version1.0.zip
    org.yafra.tdb.classic/dbi/BMBCHchoose.c
    org.yafra.tdb.classic/dbi/BMBCHinput.c
    org.yafra.tdb.classic/dbi/BMDLNchoose.c
    org.yafra.tdb.classic/dbi/BMDLNinput.c
    org.yafra.tdb.classic/dbi/BMDLNsend.c
    org.yafra.tdb.classic/dbi/BMinit.c
    org.yafra.tdb.classic/dbi/BMobjchoose.c
    org.yafra.tdb.classic/dbi/BMRESchoose.c
    org.yafra.tdb.classic/dbi/BMRESinput.c
    org.yafra.tdb.classic/dbi/BMRESread.c
    org.yafra.tdb.classic/dbi/BMRESsend.c
    org.yafra.tdb.classic/dbi/createIndex.c
    org.yafra.tdb.classic/dbi/dropIndex.c
    org.yafra.tdb.classic/dbi/GRchoose.c
    org.yafra.tdb.classic/dbi/GRcolorInit.c
    org.yafra.tdb.classic/dbi/GRgetreg.c
    org.yafra.tdb.classic/dbi/GRinput.c
    org.yafra.tdb.classic/dbi/GRnextRegion.c
    org.yafra.tdb.classic/dbi/GRrefresh.c
    org.yafra.tdb.classic/dbi/GRselect.c
    org.yafra.tdb.classic/dbi/GRtestRegion.c
    org.yafra.tdb.classic/dbi/GRwrite.c
    org.yafra.tdb.classic/dbi/Init.c
    org.yafra.tdb.classic/dbi/InitDLT.c
    org.yafra.tdb.classic/dbi/InitLAB.c
    org.yafra.tdb.classic/dbi/MainLoop.c
    org.yafra.tdb.classic/dbi/MainMarco.c
    org.yafra.tdb.classic/dbi/MainServer.c
    org.yafra.tdb.classic/dbi/MenuAktion.c
    org.yafra.tdb.classic/dbi/MenuBM.c
    org.yafra.tdb.classic/dbi/MenuChoose.c
    org.yafra.tdb.classic/dbi/MenuDelete.c
    org.yafra.tdb.classic/dbi/MenuGlobal.c
    org.yafra.tdb.classic/dbi/MenuGra.c
    org.yafra.tdb.classic/dbi/MenuHelp.c
    org.yafra.tdb.classic/dbi/MenuInfo.c
    org.yafra.tdb.classic/dbi/MenuMX.c
    org.yafra.tdb.classic/dbi/MenuOneItem.c
    org.yafra.tdb.classic/dbi/MenuOpt.c
    org.yafra.tdb.classic/dbi/MenuSelect.c
    org.yafra.tdb.classic/dbi/MXaction.c
    org.yafra.tdb.classic/dbi/MXbinarysend.c
    org.yafra.tdb.classic/dbi/MXshowsend.c
    org.yafra.tdb.classic/dbi/readDouble.c
    org.yafra.tdb.classic/dbi/readInteger.c
    org.yafra.tdb.classic/dbi/readShort.c
    org.yafra.tdb.classic/dbi/UtilBackup.c
    org.yafra.tdb.classic/dbi/UtilCleanString.c
    org.yafra.tdb.classic/dbi/UtilDelBlanks.c
    org.yafra.tdb.classic/dbi/UtilImmediatCall.c
    org.yafra.tdb.classic/dbi/UtilMsg.c
    org.yafra.tdb.classic/dbi/UtilMsgFree.c
    org.yafra.tdb.classic/dbi/UtilMsgInit.c
    org.yafra.tdb.classic/dbi/UtilRestore.c
    org.yafra.tdb.classic/dbi/UtilSplitMenu.c
    org.yafra.tdb.classic/dbi/WriteEntry.c
    org.yafra.tdb.classic/dbi/WriteInfo.c
    org.yafra.tdb.classic/dbi/xADRdelete.c
    org.yafra.tdb.classic/dbi/xADRinfo.c
    org.yafra.tdb.classic/dbi/xADRinput.c
    org.yafra.tdb.classic/dbi/xADRselect.c
    org.yafra.tdb.classic/dbi/xAKTdelete.c
    org.yafra.tdb.classic/dbi/xAKTDwrite.c
    org.yafra.tdb.classic/dbi/xAKTexec.c
    org.yafra.tdb.classic/dbi/xAKTGdelete.c
    org.yafra.tdb.classic/dbi/xAKTGinfo.c
    org.yafra.tdb.classic/dbi/xAKTGinput.c
    org.yafra.tdb.classic/dbi/xAKTGselect.c
    org.yafra.tdb.classic/dbi/xAKTinput.c
    org.yafra.tdb.classic/dbi/xAKTPdelete.c
    org.yafra.tdb.classic/dbi/xAKTselect.c
    org.yafra.tdb.classic/dbi/xAKTTdelete.c
    org.yafra.tdb.classic/dbi/xAKTTinfo.c
    org.yafra.tdb.classic/dbi/xAKTTinput.c
    org.yafra.tdb.classic/dbi/xAKTTselect.c
    org.yafra.tdb.classic/dbi/xARRcopy.c
    org.yafra.tdb.classic/dbi/xARRdelete.c
    org.yafra.tdb.classic/dbi/xARRinfo.c
    org.yafra.tdb.classic/dbi/xARRinput.c
    org.yafra.tdb.classic/dbi/xARRselect.c
    org.yafra.tdb.classic/dbi/xBCHdelete.c
    org.yafra.tdb.classic/dbi/xBCHselect.c
    org.yafra.tdb.classic/dbi/xBEZdelete.c
    org.yafra.tdb.classic/dbi/xBEZinput.c
    org.yafra.tdb.classic/dbi/xBEZselect.c
    org.yafra.tdb.classic/dbi/xDATselect.c
    org.yafra.tdb.classic/dbi/xDLAdelete.c
    org.yafra.tdb.classic/dbi/xDLAinfo.c
    org.yafra.tdb.classic/dbi/xDLAinput.c
    org.yafra.tdb.classic/dbi/xDLAmatrix.c
    org.yafra.tdb.classic/dbi/xDLAselect.c
    org.yafra.tdb.classic/dbi/xDLATdelete.c
    org.yafra.tdb.classic/dbi/xDLATinput.c
    org.yafra.tdb.classic/dbi/xDLATselect.c
    org.yafra.tdb.classic/dbi/xDLcopymove.c
    org.yafra.tdb.classic/dbi/xDLdelete.c
    org.yafra.tdb.classic/dbi/xDLinfo.c
    org.yafra.tdb.classic/dbi/xDLinput.c
    org.yafra.tdb.classic/dbi/xDLNAdelete.c
    org.yafra.tdb.classic/dbi/xDLNdefaults.c
    org.yafra.tdb.classic/dbi/xDLNdelete.c
    org.yafra.tdb.classic/dbi/xDLNinfo.c
    org.yafra.tdb.classic/dbi/xDLNinput.c
    org.yafra.tdb.classic/dbi/xDLNselect.c
    org.yafra.tdb.classic/dbi/xDLNTdelete.c
    org.yafra.tdb.classic/dbi/xDLNTinput.c
    org.yafra.tdb.classic/dbi/xDLNTselect.c
    org.yafra.tdb.classic/dbi/xDLselect.c
    org.yafra.tdb.classic/dbi/xDLTdelete.c
    org.yafra.tdb.classic/dbi/xDLTfree.c
    org.yafra.tdb.classic/dbi/xDLTinfo.c
    org.yafra.tdb.classic/dbi/xDLTinput.c
    org.yafra.tdb.classic/dbi/xDLTnumofdln.c
    org.yafra.tdb.classic/dbi/xDLTselect.c
    org.yafra.tdb.classic/dbi/xDLTTdelete.c
    org.yafra.tdb.classic/dbi/xDLTTinput.c
    org.yafra.tdb.classic/dbi/xDLTTselect.c
    org.yafra.tdb.classic/dbi/xGLOBinit.c
    org.yafra.tdb.classic/dbi/xGRAdelete.c
    org.yafra.tdb.classic/dbi/xGRAinput.c
    org.yafra.tdb.classic/dbi/xGRAselect.c
    org.yafra.tdb.classic/dbi/xKARdelete.c
    org.yafra.tdb.classic/dbi/xKARinput.c
    org.yafra.tdb.classic/dbi/xKARselect.c
    org.yafra.tdb.classic/dbi/xKATdelete.c
    org.yafra.tdb.classic/dbi/xKATfree.c
    org.yafra.tdb.classic/dbi/xKATinfo.c
    org.yafra.tdb.classic/dbi/xKATinput.c
    org.yafra.tdb.classic/dbi/xKATselect.c
    org.yafra.tdb.classic/dbi/xKOLdelete.c
    org.yafra.tdb.classic/dbi/xKOLinfo.c
    org.yafra.tdb.classic/dbi/xKOLinput.c
    org.yafra.tdb.classic/dbi/xKOLselect.c
    org.yafra.tdb.classic/dbi/xKOLTdelete.c
    org.yafra.tdb.classic/dbi/xKOLTinput.c
    org.yafra.tdb.classic/dbi/xKOLTselect.c
    org.yafra.tdb.classic/dbi/xKOMDdelete.c
    org.yafra.tdb.classic/dbi/xKOMdelete.c
    org.yafra.tdb.classic/dbi/xKOMDinfo.c
    org.yafra.tdb.classic/dbi/xKOMDinput.c
    org.yafra.tdb.classic/dbi/xKOMDselect.c
    org.yafra.tdb.classic/dbi/xKOMinfo.c
    org.yafra.tdb.classic/dbi/xKOMinput.c
    org.yafra.tdb.classic/dbi/xKOMselect.c
    org.yafra.tdb.classic/dbi/xKONDdelete.c
    org.yafra.tdb.classic/dbi/xKONdelete.c
    org.yafra.tdb.classic/dbi/xKONDinfo.c
    org.yafra.tdb.classic/dbi/xKONDinput.c
    org.yafra.tdb.classic/dbi/xKONDselect.c
    org.yafra.tdb.classic/dbi/xKONHdelete.c
    org.yafra.tdb.classic/dbi/xKONHinput.c
    org.yafra.tdb.classic/dbi/xKONHselect.c
    org.yafra.tdb.classic/dbi/xKONinfo.c
    org.yafra.tdb.classic/dbi/xKONinput.c
    org.yafra.tdb.classic/dbi/xKONselect.c
    org.yafra.tdb.classic/dbi/xKUNdelete.c
    org.yafra.tdb.classic/dbi/xKUNinput.c
    org.yafra.tdb.classic/dbi/xKUNselect.c
    org.yafra.tdb.classic/dbi/xKUNTdelete.c
    org.yafra.tdb.classic/dbi/xKUNTinput.c
    org.yafra.tdb.classic/dbi/xKUNTselect.c
    org.yafra.tdb.classic/dbi/xLANDdelete.c
    org.yafra.tdb.classic/dbi/xLANDinfo.c
    org.yafra.tdb.classic/dbi/xLANDinput.c
    org.yafra.tdb.classic/dbi/xLANDselect.c
    org.yafra.tdb.classic/dbi/xLWdelete.c
    org.yafra.tdb.classic/dbi/xLWinfo.c
    org.yafra.tdb.classic/dbi/xLWinput.c
    org.yafra.tdb.classic/dbi/xLWselect.c
    org.yafra.tdb.classic/dbi/xMSGdelete.c
    org.yafra.tdb.classic/dbi/xMSGinput.c
    org.yafra.tdb.classic/dbi/xMSGselect.c
    org.yafra.tdb.classic/dbi/xORTdelete.c
    org.yafra.tdb.classic/dbi/xORTinfo.c
    org.yafra.tdb.classic/dbi/xORTinput.c
    org.yafra.tdb.classic/dbi/xORTselect.c
    org.yafra.tdb.classic/dbi/xOUTexec.c
    org.yafra.tdb.classic/dbi/xOUTselect.c
    org.yafra.tdb.classic/dbi/xPCXdelete.c
    org.yafra.tdb.classic/dbi/xPCXinfo.c
    org.yafra.tdb.classic/dbi/xPCXinput.c
    org.yafra.tdb.classic/dbi/xPCXsearch.c
    org.yafra.tdb.classic/dbi/xPCXselect.c
    org.yafra.tdb.classic/dbi/xPREdelete.c
    org.yafra.tdb.classic/dbi/xPREinfo.c
    org.yafra.tdb.classic/dbi/xPREinput.c
    org.yafra.tdb.classic/dbi/xPREselect.c
    org.yafra.tdb.classic/dbi/xPRGdelete.c
    org.yafra.tdb.classic/dbi/xPRGinput.c
    org.yafra.tdb.classic/dbi/xPRGselect.c
    org.yafra.tdb.classic/dbi/xRESdelete.c
    org.yafra.tdb.classic/dbi/xRESinfo.c
    org.yafra.tdb.classic/dbi/xRESwrite.c
    org.yafra.tdb.classic/dbi/xSAIdelete.c
    org.yafra.tdb.classic/dbi/xSAIinput.c
    org.yafra.tdb.classic/dbi/xSAIselect.c
    org.yafra.tdb.classic/dbi/xSPRdelete.c
    org.yafra.tdb.classic/dbi/xSPRinput.c
    org.yafra.tdb.classic/dbi/xSPRselect.c
    org.yafra.tdb.classic/dbi/xSTAdelete.c
    org.yafra.tdb.classic/dbi/xSTAgetattribut.c
    org.yafra.tdb.classic/dbi/xSTAinput.c
    org.yafra.tdb.classic/dbi/xSTAselect.c
    org.yafra.tdb.classic/dbi/xTDLdelete.c
    org.yafra.tdb.classic/dbi/xTDLinfo.c
    org.yafra.tdb.classic/dbi/xTDLinput.c
    org.yafra.tdb.classic/dbi/xTDLselect.c
    org.yafra.tdb.classic/dbi/xTXTinput.c
    org.yafra.tdb.classic/dbi/xTXTwrite.c
    org.yafra.tdb.classic/dbi/xWHRdelete.c
    org.yafra.tdb.classic/dbi/xWHRinfo.c
    org.yafra.tdb.classic/dbi/xWHRinput.c
    org.yafra.tdb.classic/dbi/xWHRselect.c
    org.yafra.tdb.classic/dbinet/dbitowww.c
    org.yafra.tdb.classic/dbinet/dbtoascii.c
    org.yafra.tdb.classic/dbinet/KAPAinfo.c
    org.yafra.tdb.classic/dbinet/mpnet.c
    org.yafra.tdb.classic/dbinet/mpnetmsg.c
    org.yafra.tdb.classic/dbinet/mpnetwww.c
    org.yafra.tdb.classic/dbinet/RESwrite.c
    org.yafra.tdb.classic/dbinet/tdbnetGLOBinit.c
    org.yafra.tdb.classic/dbinet/TXTwrite.c
    org.yafra.tdb.classic/gtk/callbacks.c
    org.yafra.tdb.classic/gtk/callbacks.h
    org.yafra.tdb.classic/gtk/cb-about-exit.c
    org.yafra.tdb.classic/gtk/cb-language.c
    org.yafra.tdb.classic/gtk/cb-logon.c
    org.yafra.tdb.classic/gtk/cb-mainwin.c
    org.yafra.tdb.classic/gtk/cb-options.c
    org.yafra.tdb.classic/gtk/int-about-exit.c
    org.yafra.tdb.classic/gtk/int-defines.h
    org.yafra.tdb.classic/gtk/int-language.c
    org.yafra.tdb.classic/gtk/int-login.c
    org.yafra.tdb.classic/gtk/int-mainwin.c
    org.yafra.tdb.classic/gtk/int-options.c
    org.yafra.tdb.classic/gtk/int-select.c
    org.yafra.tdb.classic/gtk/interface.h
    org.yafra.tdb.classic/gtk/main.c
    org.yafra.tdb.classic/gtk/mpgtkaddon.c
    org.yafra.tdb.classic/gtk/support.c
    org.yafra.tdb.classic/gtk/support.h
    org.yafra.tdb.classic/gui/bactionb.c
    org.yafra.tdb.classic/gui/bboard.c
    org.yafra.tdb.classic/gui/bbutfild.c
    org.yafra.tdb.classic/gui/bcat.c
    org.yafra.tdb.classic/gui/bcatextr.c
    org.yafra.tdb.classic/gui/bcatrcal.c
    org.yafra.tdb.classic/gui/bcatscrl.c
    org.yafra.tdb.classic/gui/bdln.c
    org.yafra.tdb.classic/gui/bdlnredu.c
    org.yafra.tdb.classic/gui/bdlnsex.c
    org.yafra.tdb.classic/gui/bdlntype.c
    org.yafra.tdb.classic/gui/bdlt.c
    org.yafra.tdb.classic/gui/bmenubtn.c
    org.yafra.tdb.classic/gui/bmenus.c
    org.yafra.tdb.classic/gui/bnofmany.c
    org.yafra.tdb.classic/gui/bradio.c
    org.yafra.tdb.classic/gui/btests.c
    org.yafra.tdb.classic/gui/btoggle.c
    org.yafra.tdb.classic/gui/btransl.c
    org.yafra.tdb.classic/gui/gaction.c
    org.yafra.tdb.classic/gui/ganzstr.c
    org.yafra.tdb.classic/gui/gask.c
    org.yafra.tdb.classic/gui/gbook.c
    org.yafra.tdb.classic/gui/gchange.c
    org.yafra.tdb.classic/gui/gckrect.c
    org.yafra.tdb.classic/gui/gcmpreg.c
    org.yafra.tdb.classic/gui/gcopy.c
    org.yafra.tdb.classic/gui/gcpobj.c
    org.yafra.tdb.classic/gui/gcrarc.c
    org.yafra.tdb.classic/gui/gcrcirc.c
    org.yafra.tdb.classic/gui/gcrelip.c
    org.yafra.tdb.classic/gui/gcrgraf.c
    org.yafra.tdb.classic/gui/gcrline.c
    org.yafra.tdb.classic/gui/gcrpt.c
    org.yafra.tdb.classic/gui/gcrrect.c
    org.yafra.tdb.classic/gui/gcrreg.c
    org.yafra.tdb.classic/gui/gcrrego.c
    org.yafra.tdb.classic/gui/gcrregp.c
    org.yafra.tdb.classic/gui/gcrtext.c
    org.yafra.tdb.classic/gui/gdelall.c
    org.yafra.tdb.classic/gui/gdelete.c
    org.yafra.tdb.classic/gui/gdelgraf.c
    org.yafra.tdb.classic/gui/gdelobj.c
    org.yafra.tdb.classic/gui/gdelreg.c
    org.yafra.tdb.classic/gui/gdraw.c
    org.yafra.tdb.classic/gui/gdrwcurs.c
    org.yafra.tdb.classic/gui/gdrwgrid.c
    org.yafra.tdb.classic/gui/gdrwobj.c
    org.yafra.tdb.classic/gui/gdrwpick.c
    org.yafra.tdb.classic/gui/gdrwreg.c
    org.yafra.tdb.classic/gui/gdrwregp.c
    org.yafra.tdb.classic/gui/gdrwtemp.c
    org.yafra.tdb.classic/gui/gfdobj.c
    org.yafra.tdb.classic/gui/gfdobjko.c
    org.yafra.tdb.classic/gui/gfdpoint.c
    org.yafra.tdb.classic/gui/gfdrgchi.c
    org.yafra.tdb.classic/gui/gfdrggra.c
    org.yafra.tdb.classic/gui/gfdrgkor.c
    org.yafra.tdb.classic/gui/gfdrgnam.c
    org.yafra.tdb.classic/gui/gfdrgpt.c
    org.yafra.tdb.classic/gui/gfile.c
    org.yafra.tdb.classic/gui/gfilehdl.c
    org.yafra.tdb.classic/gui/ggetarc.c
    org.yafra.tdb.classic/gui/ggetfile.c
    org.yafra.tdb.classic/gui/ggetkord.c
    org.yafra.tdb.classic/gui/ggetpt.c
    org.yafra.tdb.classic/gui/ghelp.c
    org.yafra.tdb.classic/gui/gigerund.c
    org.yafra.tdb.classic/gui/ginit.c
    org.yafra.tdb.classic/gui/glocate.c
    org.yafra.tdb.classic/gui/gmove.c
    org.yafra.tdb.classic/gui/gobjkord.c
    org.yafra.tdb.classic/gui/gquit.c
    org.yafra.tdb.classic/gui/grdbook.c
    org.yafra.tdb.classic/gui/grdgraf.c
    org.yafra.tdb.classic/gui/grdreg.c
    org.yafra.tdb.classic/gui/grdregz.c
    org.yafra.tdb.classic/gui/gregname.c
    org.yafra.tdb.classic/gui/gselreg.c
    org.yafra.tdb.classic/gui/gselstat.c
    org.yafra.tdb.classic/gui/gsend.c
    org.yafra.tdb.classic/gui/gsetfile.c
    org.yafra.tdb.classic/gui/gstrpos.c
    org.yafra.tdb.classic/gui/gtime.c
    org.yafra.tdb.classic/gui/gunbook.c
    org.yafra.tdb.classic/gui/gupdcurs.c
    org.yafra.tdb.classic/gui/gvalues.c
    org.yafra.tdb.classic/gui/gwaitfor.c
    org.yafra.tdb.classic/gui/gwgbook.c
    org.yafra.tdb.classic/gui/gwggraf.c
    org.yafra.tdb.classic/gui/gwglist.c
    org.yafra.tdb.classic/gui/gwgmenub.c
    org.yafra.tdb.classic/gui/gwgoptio.c
    org.yafra.tdb.classic/gui/gwgpalet.c
    org.yafra.tdb.classic/gui/gwgselec.c
    org.yafra.tdb.classic/gui/gwgshell.c
    org.yafra.tdb.classic/gui/gwgstat.c
    org.yafra.tdb.classic/gui/gwgtext.c
    org.yafra.tdb.classic/gui/gwrgraf.c
    org.yafra.tdb.classic/gui/gwrreg.c
    org.yafra.tdb.classic/gui/gzoom.c
    org.yafra.tdb.classic/gui/gzoomstk.c
    org.yafra.tdb.classic/gui/uactionb.c
    org.yafra.tdb.classic/gui/uallg.c
    org.yafra.tdb.classic/gui/ualloc.c
    org.yafra.tdb.classic/gui/uaudio.c
    org.yafra.tdb.classic/gui/ubanner.c
    org.yafra.tdb.classic/gui/ubeep.c
    org.yafra.tdb.classic/gui/ucallpop.c
    org.yafra.tdb.classic/gui/uchoose.c
    org.yafra.tdb.classic/gui/ucolor.c
    org.yafra.tdb.classic/gui/ucomm.c
    org.yafra.tdb.classic/gui/ucselect.c
    org.yafra.tdb.classic/gui/uctwin.c
    org.yafra.tdb.classic/gui/ucursor.c
    org.yafra.tdb.classic/gui/udefrage.c
    org.yafra.tdb.classic/gui/udestroy.c
    org.yafra.tdb.classic/gui/udialog.c
    org.yafra.tdb.classic/gui/uedit.c
    org.yafra.tdb.classic/gui/ueditor.c
    org.yafra.tdb.classic/gui/uexitbar.c
    org.yafra.tdb.classic/gui/ufehler.c
    org.yafra.tdb.classic/gui/ufield.c
    org.yafra.tdb.classic/gui/ufindhol.c
    org.yafra.tdb.classic/gui/uframelb.c
    org.yafra.tdb.classic/gui/uglob.c
    org.yafra.tdb.classic/gui/uglobmem.c
    org.yafra.tdb.classic/gui/uhelp.c
    org.yafra.tdb.classic/gui/uiconpix.c
    org.yafra.tdb.classic/gui/uimecall.c
    org.yafra.tdb.classic/gui/uinfo.c
    org.yafra.tdb.classic/gui/uinput.c
    org.yafra.tdb.classic/gui/ulabels.c
    org.yafra.tdb.classic/gui/ulines.c
    org.yafra.tdb.classic/gui/ulizdial.c
    org.yafra.tdb.classic/gui/umain.c
    org.yafra.tdb.classic/gui/umenubtn.c
    org.yafra.tdb.classic/gui/umenufld.c
    org.yafra.tdb.classic/gui/umenus.c
    org.yafra.tdb.classic/gui/umenustr.c
    org.yafra.tdb.classic/gui/umesspop.c
    org.yafra.tdb.classic/gui/unewlevl.c
    org.yafra.tdb.classic/gui/uoptpop.c
    org.yafra.tdb.classic/gui/uopttest.c
    org.yafra.tdb.classic/gui/uoutmenu.c
    org.yafra.tdb.classic/gui/upcxpop.c
    org.yafra.tdb.classic/gui/upixmap.c
    org.yafra.tdb.classic/gui/upopup.c
    org.yafra.tdb.classic/gui/uprint.c
    org.yafra.tdb.classic/gui/uprofile.c
    org.yafra.tdb.classic/gui/upulldwn.c
    org.yafra.tdb.classic/gui/uquestio.c
    org.yafra.tdb.classic/gui/useldown.c
    org.yafra.tdb.classic/gui/uselglob.c
    org.yafra.tdb.classic/gui/ushell.c
    org.yafra.tdb.classic/gui/usoftkey.c
    org.yafra.tdb.classic/gui/utable.c
    org.yafra.tdb.classic/gui/utalking.c
    org.yafra.tdb.classic/gui/utalkto.c
    org.yafra.tdb.classic/gui/utoggle.c
    org.yafra.tdb.classic/gui/utoread.c
    org.yafra.tdb.classic/gui/uwidgets.c
    org.yafra.tdb.classic/gui/uwindows.c
    org.yafra.tdb.classic/include/AKTmain.h
    org.yafra.tdb.classic/include/binclude.h
    org.yafra.tdb.classic/include/gdefs.h
    org.yafra.tdb.classic/include/ginclude.h
    org.yafra.tdb.classic/include/gproto.h
    org.yafra.tdb.classic/include/gtypes.h
    org.yafra.tdb.classic/include/mpact.h
    org.yafra.tdb.classic/include/mpcomm.h
    org.yafra.tdb.classic/include/mpdb.h
    org.yafra.tdb.classic/include/mpdbada.h
    org.yafra.tdb.classic/include/mpdbglob.h
    org.yafra.tdb.classic/include/mpdbhp.h
    org.yafra.tdb.classic/include/mpdbing.h
    org.yafra.tdb.classic/include/mpdbmssql.h
    org.yafra.tdb.classic/include/mpdbodbc.h
    org.yafra.tdb.classic/include/mpdbora.h
    org.yafra.tdb.classic/include/mpdef.h
    org.yafra.tdb.classic/include/mpdefact.h
    org.yafra.tdb.classic/include/mpgtk.h
    org.yafra.tdb.classic/include/mplizenz.h
    org.yafra.tdb.classic/include/mpmain.h
    org.yafra.tdb.classic/include/mpmendef.h
    org.yafra.tdb.classic/include/mpmenlev.h
    org.yafra.tdb.classic/include/mpmsg.h
    org.yafra.tdb.classic/include/mpnet.h
    org.yafra.tdb.classic/include/mpobjact.h
    org.yafra.tdb.classic/include/mpobjdef.h
    org.yafra.tdb.classic/include/mpobjvar.h
    org.yafra.tdb.classic/include/mpproact.h
    org.yafra.tdb.classic/include/mpproapi.h
    org.yafra.tdb.classic/include/mpprodbi.h
    org.yafra.tdb.classic/include/mpprolib.h
    org.yafra.tdb.classic/include/mpprolibxml.h
    org.yafra.tdb.classic/include/mpreport.h
    org.yafra.tdb.classic/include/mpsql.h
    org.yafra.tdb.classic/include/mpsqlbez.h
    org.yafra.tdb.classic/include/mpsqlcnt.h
    org.yafra.tdb.classic/include/mpsqldel.h
    org.yafra.tdb.classic/include/mpsqlins.h
    org.yafra.tdb.classic/include/mpsqlsel.h
    org.yafra.tdb.classic/include/mpsqlupd.h
    org.yafra.tdb.classic/include/mpstadef.h
    org.yafra.tdb.classic/include/mpstrlen.h
    org.yafra.tdb.classic/include/mpvaract.h
    org.yafra.tdb.classic/include/mpvarapi.h
    org.yafra.tdb.classic/include/mpvardbi.h
    org.yafra.tdb.classic/include/mpvarlib.h
    org.yafra.tdb.classic/include/mpvarwww.h
    org.yafra.tdb.classic/include/mpwww.h
    org.yafra.tdb.classic/include/uappdefs.h
    org.yafra.tdb.classic/include/ucselect.h
    org.yafra.tdb.classic/include/uctwin.h
    org.yafra.tdb.classic/include/udefs.h
    org.yafra.tdb.classic/include/uinclude.h
    org.yafra.tdb.classic/include/ulabels.h
    org.yafra.tdb.classic/include/umenu.h
    org.yafra.tdb.classic/include/uproto.h
    org.yafra.tdb.classic/include/utypes.h
    org.yafra.tdb.classic/include/uwgclass.h
    org.yafra.tdb.classic/lib/alloc.c
    org.yafra.tdb.classic/lib/datstr.c
    org.yafra.tdb.classic/lib/debug.c
    org.yafra.tdb.classic/lib/free.c
    org.yafra.tdb.classic/lib/getbuf.c
    org.yafra.tdb.classic/lib/log.c
    org.yafra.tdb.classic/lib/signal.c
    org.yafra.tdb.classic/libcomm/comm.c
    org.yafra.tdb.classic/libxml/xml.c
    org.yafra.tdb.classic/makefile
    org.yafra.tdb.classic/makefile.actlib
    org.yafra.tdb.classic/makefile.api
    org.yafra.tdb.classic/makefile.db
    org.yafra.tdb.classic/makefile.dbi
    org.yafra.tdb.classic/makefile.dbinet
    org.yafra.tdb.classic/makefile.dblib
    org.yafra.tdb.classic/makefile.gtk
    org.yafra.tdb.classic/makefile.gui
    org.yafra.tdb.classic/makefile.lib
    org.yafra.tdb.classic/makefile.libcomm
    org.yafra.tdb.classic/makefile.libxml
    org.yafra.tdb.classic/mapo.nsi
    org.yafra.tdb.classic/mpgtk-v3.glade
    org.yafra.tdb.classic/ntactlibs.txt
    org.yafra.tdb.classic/ntdbimssqllibs.txt
    org.yafra.tdb.classic/ntdbiodbclibs.txt
    org.yafra.tdb.classic/ntdbioraclelibs.txt
    org.yafra.tdb.classic/ntguilibs-humm.txt
    org.yafra.tdb.classic/ntguilibs.txt
    org.yafra.tdb.classic/readme.txt
    org.yafra.tdb.setup/config/common/cursback.bm
    org.yafra.tdb.setup/config/common/curscomm.bm
    org.yafra.tdb.setup/config/common/error.wav
    org.yafra.tdb.setup/config/common/mptogra.icon
    org.yafra.tdb.setup/config/common/mptogui.icon
    org.yafra.tdb.setup/config/common/quit.wav
    org.yafra.tdb.setup/config/common/toggle.wav
    org.yafra.tdb.setup/config/common/welcome.wav
    org.yafra.tdb.setup/config/hpux/errors
    org.yafra.tdb.setup/config/hpux/labels_d
    org.yafra.tdb.setup/config/hpux/labels_e
    org.yafra.tdb.setup/config/hpux/labels_f
    org.yafra.tdb.setup/config/hpux/MPgui
    org.yafra.tdb.setup/config/hpux/mpgui.pro
    org.yafra.tdb.setup/config/linux/errors
    org.yafra.tdb.setup/config/linux/labels_d
    org.yafra.tdb.setup/config/linux/labels_e
    org.yafra.tdb.setup/config/linux/labels_f
    org.yafra.tdb.setup/config/linux/MPgui
    org.yafra.tdb.setup/config/linux/mpgui.pro
    org.yafra.tdb.setup/config/linux/update-services.pl
    org.yafra.tdb.setup/config/samples/grafik/airfrance.gra
    org.yafra.tdb.setup/config/samples/grafik/airplane.gra
    org.yafra.tdb.setup/config/samples/grafik/AMERIKANIS.GRA
    org.yafra.tdb.setup/config/samples/grafik/AZUR.GRA
    org.yafra.tdb.setup/config/samples/grafik/BRITANIS.GRA
    org.yafra.tdb.setup/config/samples/grafik/brt.gra
    org.yafra.tdb.setup/config/samples/grafik/bungalow.gra
    org.yafra.tdb.setup/config/samples/grafik/chandrisbus.gra
    org.yafra.tdb.setup/config/samples/grafik/coach.gra
    org.yafra.tdb.setup/config/samples/grafik/corfuhotel.gra
    org.yafra.tdb.setup/config/samples/grafik/guides.gra
    org.yafra.tdb.setup/config/samples/grafik/hor.gra
    org.yafra.tdb.setup/config/samples/grafik/HORIZON.GRA
    org.yafra.tdb.setup/config/samples/grafik/HORIZON2.GRA
    org.yafra.tdb.setup/config/samples/grafik/hotel2.gra
    org.yafra.tdb.setup/config/samples/grafik/hotelRoyalAndalus.gra
    org.yafra.tdb.setup/config/samples/grafik/hotelRoyalAndalus1.gra
    org.yafra.tdb.setup/config/samples/grafik/jet.gra
    org.yafra.tdb.setup/config/samples/grafik/jet1.gra
    org.yafra.tdb.setup/config/samples/grafik/jet2.gra
    org.yafra.tdb.setup/config/samples/grafik/Koch.gra
    org.yafra.tdb.setup/config/samples/grafik/Koch2.gra
    org.yafra.tdb.setup/config/samples/grafik/KOMOEDIE.GRA
    org.yafra.tdb.setup/config/samples/grafik/minibus.gra
    org.yafra.tdb.setup/config/samples/grafik/olympia_hotel.gra
    org.yafra.tdb.setup/config/samples/grafik/schiff14.gra
    org.yafra.tdb.setup/config/samples/grafik/schiff15.gra
    org.yafra.tdb.setup/config/samples/grafik/schiff_azur.gra
    org.yafra.tdb.setup/config/samples/grafik/ship.gra
    org.yafra.tdb.setup/config/samples/grafik/sphotel.gra
    org.yafra.tdb.setup/config/samples/grafik/spitz.gra
    org.yafra.tdb.setup/config/samples/grafik/swissairlx1.gra
    org.yafra.tdb.setup/config/samples/grafik/train.gra
    org.yafra.tdb.setup/config/samples/grafik/WALDHORT.GRA
    org.yafra.tdb.setup/config/samples/grafik/winkel_hotel.gra
    org.yafra.tdb.setup/config/samples/grafik/winkel_hotel1.gra
    org.yafra.tdb.setup/config/samples/grafik/zug.gra
    org.yafra.tdb.setup/config/samples/grafik/zug1.gra
    org.yafra.tdb.setup/config/samples/grafik/zug2.gra
    org.yafra.tdb.setup/config/samples/grafik/zugic.gra
    org.yafra.tdb.setup/config/samples/outputs/Aktionen.txt
    org.yafra.tdb.setup/config/samples/outputs/allout.412.txt
    org.yafra.tdb.setup/config/samples/outputs/allout.448.txt
    org.yafra.tdb.setup/config/samples/Demoaufbau.txt
    org.yafra.tdb.setup/config/scripts/cleanupbch.sql
    org.yafra.tdb.setup/config/scripts/cleanupgra.sql
    org.yafra.tdb.setup/config/scripts/mpgui.sh
    org.yafra.tdb.setup/config/scripts/OUTauftrag.sh
    org.yafra.tdb.setup/config/scripts/OUTcontrol.sh
    org.yafra.tdb.setup/config/scripts/OUTfaktura.sh
    org.yafra.tdb.setup/config/scripts/OUTkomm.sh
    org.yafra.tdb.setup/config/scripts/OUTmani.sh
    org.yafra.tdb.setup/config/scripts/OUToption.sh
    org.yafra.tdb.setup/config/scripts/OUTorder.sh
    org.yafra.tdb.setup/config/scripts/OUTpax.sh
    org.yafra.tdb.setup/config/scripts/OUTpaxbus.sh
    org.yafra.tdb.setup/config/scripts/OUTprogram.sh
    org.yafra.tdb.setup/config/scripts/OUTrequest.sh
    org.yafra.tdb.setup/config/scripts/OUTrevenu.sh
    org.yafra.tdb.setup/config/scripts/OUTsta.sh
    org.yafra.tdb.setup/config/scripts/OUTstamm.sh
    org.yafra.tdb.setup/config/scripts/OUTstatdlt.sh
    org.yafra.tdb.setup/config/scripts/OUTstatistik.sh
    org.yafra.tdb.setup/config/scripts/OUTticket.sh
    org.yafra.tdb.setup/config/scripts/OUTvoucher.sh
    org.yafra.tdb.setup/config/scripts/update-services-ux.pl
    org.yafra.tdb.setup/config/windows/errors
    org.yafra.tdb.setup/config/windows/inst-appdef.bat
    org.yafra.tdb.setup/config/windows/labels_d
    org.yafra.tdb.setup/config/windows/labels_e
    org.yafra.tdb.setup/config/windows/labels_f
    org.yafra.tdb.setup/config/windows/makempadminconf.pl
    org.yafra.tdb.setup/config/windows/makempguipro.bat
    org.yafra.tdb.setup/config/windows/makempproperties.pl
    org.yafra.tdb.setup/config/windows/mapo.ico
    org.yafra.tdb.setup/config/windows/mpadmin.ini
    org.yafra.tdb.setup/config/windows/mpbooker.ini
    org.yafra.tdb.setup/config/windows/MPgui
    org.yafra.tdb.setup/config/windows/mpgui.ico
    org.yafra.tdb.setup/config/windows/mpgui.ini
    org.yafra.tdb.setup/config/windows/update-services.pl
    org.yafra.tdb.setup/config/xml/sql-mp_debitor.xml
    org.yafra.tdb.setup/config/xml/sql-sta_werte.xml
    org.yafra.tdb.setup/config/xml/tdb-cmd.dtd
    org.yafra.tdb.setup/config/xml/tdb-cmd.xml
    org.yafra.tdb.setup/config/xml/tdb-cmd.xsd
    org.yafra.tdb.setup/config/xml/tdb-login.dtd
    org.yafra.tdb.setup/config/xml/tdb-login.xml
    org.yafra.tdb.setup/config/xml/tdb-login.xsd
    org.yafra.tdb.setup/config/xml/tdb-query.dtd
    org.yafra.tdb.setup/config/xml/tdb-query.xml
    org.yafra.tdb.setup/config/xml/tdb-query.xsd
    org.yafra.tdb.setup/config/xml/tdb-typecodes.dtd
    org.yafra.tdb.setup/config/xml/tdb-typecodes.xml
    org.yafra.tdb.setup/config/xml/tdb-typecodes.xsd
    org.yafra.tdb.setup/config/xml/traveldb.spp
    org.yafra.tdb.setup/config/install.sh
    org.yafra.tdb.setup/config/license.txt
    org.yafra.tdb.setup/Design-Traveldb.odt
    org.yafra.tdb.setup/Setup-Traveldb.odt
    build-local.sh
    build-shippable.sh
    Doxyfile
    LICENSE
    NOTICE
    README.md
    run-environment.sh
    shippable.yml)

add_executable(yafra_tdb_c ${SOURCE_FILES})